messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: green
  template:
    metadata:
      labels:
        app: messaging
        version: green
    spec:
    containers:
      - name: django-container
        image: your-dockerhub-username/django-messaging-app:green
        ports:
        - containerPort: 8000
