messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging
    version: green  # Change to "blue" to revert
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
